Closed Bug 1868451 Opened 1 year ago Closed 9 months ago

Incorrect hardware video scale on FireTV Stick

Categories

(Core :: Audio/Video: Playback, defect)

Firefox 120
ARM
Android
defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox128 --- fixed

People

(Reporter: jhnsmth1052, Assigned: jhnsmth1052)

Details

Attachments

(1 file)

Steps to reproduce:

Play any video in Firefox/GeckoView on a Fire TV.

Actual results:

All videos are scaled incorrectly on the Fire TV Stick 4K (2nd Gen). They are "zoomed in" on the top left corner. Setting gfx.webrender.software=true fixes this issue. This bug appears to be related to these two:

https://bugzilla.mozilla.org/show_bug.cgi?id=1784109
https://bugzilla.mozilla.org/show_bug.cgi?id=1825631

I have tested a patch that applies the fix for Mediatek 6735 and Kirin 980 devices to Mediatek 8696 devices as well and it appears to work.

OS: Unspecified → Android
Hardware: Unspecified → ARM

The patch for Bug 1784109 fixes incorrect video scaling due to the system
providing an incorrect transform matrix on Mediatek 6735 devices. This
patch applies this workaround to Mediatek 8696 devices as well.

Assignee: nobody → jhnsmth1052
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true

The severity field is not set for this bug.
:jimm, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(jmathies)
Attachment #9367167 - Attachment description: WIP: Bug 1868451 - Override SurfaceTexture transform on mt8696. → Bug 1868451 - Override SurfaceTexture transform on mt8696.
Flags: needinfo?(jmathies)
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a19052f04146 Override SurfaceTexture transform on mt8696. r=media-playback-reviewers,padenot
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: