Bug 1868451 - Override SurfaceTexture transform on mt8696. r=media-playback-reviewers,padenot

The patch for Bug 1784109 fixes incorrect video scaling due to the system
providing an incorrect transform matrix on Mediatek 6735 devices. This
patch applies this workaround to Mediatek 8696 devices as well.

Differential Revision: https://phabricator.services.mozilla.com/D195606